--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
         <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="8800">ワンメイク（全体）カラー（S・B込み）￥8,800</button>
         <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="2750">キッズカット（小学生未満）￥2,750</button>
     </div>
+        </div>
 
         <div class="label">希望日時</div>
         <div class="calendar-container">
