--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
 <body>
     <div class="container">
-        <h1>LANI 茨木店<br>予約フォーム
+        <h1>LANI 茨木あああ店<br>予約フォーム
         </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
@@ -796,7 +796,7 @@
             // 選択されたオプションを取得
             const selectedButtons = document.querySelectorAll('.irradiations button.active');
             const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
-            irradiationsCount = selectedIrradiations.join(', ');
+            irradiationsCount = selectedIrradiations.join('、 ');
 
             // すべてのオプションの価格を再計算
             optionsPrice = 0; // 全体をリセットして再計算
