--- a/index.html
+++ b/index.html
@@ -1315,15 +1315,30 @@
                         continue;
                     }
 
-                    // 18時以降に終了する予約を不可にする (17:30は可)
-                    if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    } else if (slotEnd.getHours() > 18) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
+                    // 18時以降に終了する予約を不可にする (火水木金のみ)
+                    if ([0, 1, 2, 4, 5, 6].includes(slotEnd.getDay())) { // 火:2, 水:3, 木:4, 金:5
+                        if (slotEnd.getHours() === 22 && slotEnd.getMinutes() > 0) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        } else if (slotEnd.getHours() > 22) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        }
+                    }
+
+                    // 18時以降に終了する予約を不可にする (火水木金のみ)
+                    if ([3].includes(slotEnd.getDay())) { // 火:2, 水:3, 木:4, 金:5
+                        if (slotEnd.getHours() === 21 && slotEnd.getMinutes() > 0) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        } else if (slotEnd.getHours() > 21) {
+                            cell.textContent = '✕';
+                            cell.classList.add('unavailable');
+                            continue;
+                        }
                     }
 
                     // ここで終了時間を使った条件処理を行う
@@ -1366,17 +1381,6 @@
                     }
                     // 営業日で、指定されている時間以外の時間は×
                     else if (businessEventTimes.length > 0) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
-                    // 月・火・木・金の09:00~10:59は✕にする（優先的にチェック）
-                    if ((slotStart.getDay() === 1 || slotStart.getDay() === 2 || slotStart.getDay() === 4 || slotStart.getDay() === 5) &&
-                        slotStart.getHours() >= 9 && slotStart.getHours() <= 10) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
-                    // 日曜日で、営業日ではない場合
-                    else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
