--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,6 @@
                 visitCount: visitCount,
                 hopeCount: hopeCount,
                 highschoolCount: highschoolCount,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value
@@ -1318,7 +1317,7 @@
             }
 
             if (!formData.hope) {
-                alert('メニューを選択してください。');
+                alert('希望メニューを選択してください。');
                 return;
             }
 
@@ -1326,7 +1325,7 @@
                 alert('第1希望日※必須を選択してください。');
                 return;
             }
-            
+
             if (!formData.phone) {
                 alert('電話番号を入力してください。');
                 return;
