--- a/index.html
+++ b/index.html
@@ -1300,6 +1300,42 @@
                 message: document.getElementById('message').value.trim()
             };
 
+            // フォームデータのチェック
+            if (!formData.name) {
+                alert('お名前を入力してください。');
+                return;
+            }
+
+            if (!formData.visitCount) {
+                alert('希望メニューを選択してください。');
+                return;
+            }
+
+            if (!formData.age) {
+                alert('年齢を選択してください。');
+                return;
+            }
+
+            if (!formData.inquiry) {
+                alert('年齢を入力してください。');
+                return;
+            }
+
+            if (!formData.hopeCount) {
+                alert('希望メニューを選択してください。');
+                return;
+            }
+
+            if (!formData.dates[0]) {
+                alert('第1希望日※必須を選択してください。');
+                return;
+            }
+
+            if (!formData.phone) {
+                alert('電話番号を入力してください。');
+                return;
+            }
+
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
