--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
         }
 
         button:hover {
-            background-color: #444;
+            background-color: #eeeeee;
             transform: scale(1.05);
         }
 
