--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             font-size: 22.5px;
             /* ここでフォントサイズを変更 */
             text-align: center;
-            padding: 5px;
+            padding: 15px;
             cursor: pointer;
             vertical-align: top;
             width: auto;
@@ -272,6 +272,10 @@
             /* ここで時間列の幅を調整 */
             font-size: 17.5px;
             /* フォントサイズを変更 */
+            text-align: left;
+            /* 左寄せ */
+            padding-left: 6px;
+            /* 少しだけ左に寄せる */
         }
 
         .calendar th {
