--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
             border: none;
             border-radius: 6px;
             background-color: #88705a;
-            color: #d8d8d8;
+            color: #000000;
             font-size: 16px;
             cursor: pointer;
             transition: all 0.3s;
