--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
         <hr>
         <div class="info-row">
             <p>${irradiationsText}</p>
-            <button class="edit-button" onclick="scrollToElement('firstirradiations')">修正する</button>
+            <button class="edit-button" onclick="scrollToElement('opusyon1'); scrollToElement('opusyon2'); scrollToElement('opusyon3'); scrollToElement('opusyon4');">修正する</button>
         </div>
         <hr>
         <div class="info-row">
