--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
         }
 
         button:hover {
-            background-color: #4d4d4d;
+            background-color: #e9e9e9;
             transform: scale(1.05);
         }
 
