--- a/index.html
+++ b/index.html
@@ -280,34 +280,34 @@
 
         <div class="label">Q2. 顎とおでこ、印象的なのは？</div>
         <div class="demand-buttons">
-            <button type="button" id="onedemand" onclick="selectdemand(this)">おでこが広い</button>
-            <button type="button" id="twodemand" onclick="selectdemand(this)"> おでこが狭い</button>
-            <button type="button" id="threedemand" onclick="selectdemand(this)">顎がシャープ</button>
-            <button type="button" id="fourdemand" onclick="selectdemand(this)">生え際が直線</button>
-            <button type="button" id="fivedemand" onclick="selectdemand(this)">丸い額</button>
-            <button type="button" id="sixdemand" onclick="selectdemand(this)">富士額なおでこ</button>
+            <button type="button" id="onedemand" data-label="A" onclick="selectdemand(this)">おでこが広い</button>
+            <button type="button" id="twodemand" data-label="A" onclick="selectdemand(this)"> おでこが狭い</button>
+            <button type="button" id="threedemand" data-label="A" onclick="selectdemand(this)">顎がシャープ</button>
+            <button type="button" id="fourdemand" data-label="A" onclick="selectdemand(this)">生え際が直線</button>
+            <button type="button" id="fivedemand" data-label="A" onclick="selectdemand(this)">丸い額</button>
+            <button type="button" id="sixdemand" data-label="A" onclick="selectdemand(this)">富士額なおでこ</button>
         </div>
 
         <div class="label">Q3. 顔の骨格・見た目は？</div>
         <div class="chance-buttons">
-            <button type="button" id="onechance" onclick="selectchance(this)">柔らか</button>
-            <button type="button" id="twochance" onclick="selectchance(this)">丸み</button>
-            <button type="button" id="threechance" onclick="selectchance(this)">潤い感 </button>
-            <button type="button" id="fourchance" onclick="selectchance(this)">直線・骨っぽい</button>
-            <button type="button" id="fivechance" onclick="selectchance(this)">艶感 </button>
-            <button type="button" id="sixchance" onclick="selectchance(this)">弾力感</button>
+            <button type="button" id="onechance" data-label="A" onclick="selectchance(this)">柔らか</button>
+            <button type="button" id="twochance" data-label="A" onclick="selectchance(this)">丸み</button>
+            <button type="button" id="threechance" data-label="A" onclick="selectchance(this)">潤い感 </button>
+            <button type="button" id="fourchance" data-label="A" onclick="selectchance(this)">直線・骨っぽい</button>
+            <button type="button" id="fivechance" data-label="A" onclick="selectchance(this)">艶感 </button>
+            <button type="button" id="sixchance" data-label="A" onclick="selectchance(this)">弾力感</button>
         </div>
 
         <div class="info-textmemo">■ STEP 2：パーツの特徴</div>
         <div class="label">過去施術<br>(過去にサロンで受けたことがある施術)</div>
         <div class="Introduction-buttons">
-            <button type="button" id="oneIntroduction" onclick="selectIntroduction(this)">ネイルサロンに初めて来た(過去施術)</button>
-            <button type="button" id="twoIntroduction" onclick="selectIntroduction(this)">ケア(過去施術) </button>
-            <button type="button" id="threeIntroduction" onclick="selectIntroduction(this)">カラーリング(過去施術)</button>
-            <button type="button" id="fourIntroduction" onclick="selectIntroduction(this)">スカルプチャー(過去施術) </button>
-            <button type="button" id="fiveIntroduction" onclick="selectIntroduction(this)">ジェルネイル(過去施術) </button>
-            <button type="button" id="sixIntroduction" onclick="selectIntroduction(this)">フット(過去施術) </button>
-            <button type="button" id="sevenIntroduction" onclick="selectIntroduction(this)">その他(過去施術) </button>
+            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">ネイルサロンに初めて来た(過去施術)</button>
+            <button type="button" id="twoIntroduction" data-label="A" onclick="selectIntroduction(this)">ケア(過去施術) </button>
+            <button type="button" id="threeIntroduction" data-label="A" onclick="selectIntroduction(this)">カラーリング(過去施術)</button>
+            <button type="button" id="fourIntroduction" data-label="A" onclick="selectIntroduction(this)">スカルプチャー(過去施術) </button>
+            <button type="button" id="fiveIntroduction" data-label="A" onclick="selectIntroduction(this)">ジェルネイル(過去施術) </button>
+            <button type="button" id="sixIntroduction" data-label="A" onclick="selectIntroduction(this)">フット(過去施術) </button>
+            <button type="button" id="sevenIntroduction" data-label="A" onclick="selectIntroduction(this)">その他(過去施術) </button>
         </div>
 
         <div class="label">薬品/ネイルでのアレルギー</div>
@@ -380,7 +380,7 @@
             // 選択されたボタンだけにactiveクラスを追加
             element.classList.add('active');
             demandCount = element.innerText;
-            selectedLabels.priority = element.dataset.label; // ←ここ追加
+            selectedLabels.demand = element.dataset.label; // ←ここ追加
         }
 
         function selectchance(element) {
@@ -391,7 +391,7 @@
             // 選択されたボタンだけにactiveクラスを追加
             element.classList.add('active');
             chanceCount = element.innerText;
-            selectedLabels.priority = element.dataset.label; // ←ここ追加
+            selectedLabels.chance = element.dataset.label; // ←ここ追加
         }
 
         function selectIntroduction(element) {
@@ -402,7 +402,7 @@
             // 選択されたボタンだけにactiveクラスを追加
             element.classList.add('active');
             IntroductionCount = element.innerText;
-            selectedLabels.priority = element.dataset.label; // ←ここ追加
+            selectedLabels.Introduction = element.dataset.label; // ←ここ追加
         }
 
         function selectdelivery(element) {
@@ -413,7 +413,7 @@
             // 選択されたボタンだけにactiveクラスを追加
             element.classList.add('active');
             deliveryCount = element.innerText;
-            selectedLabels.priority = element.dataset.label; // ←ここ追加
+            selectedLabels.delivery = element.dataset.label; // ←ここ追加
         }
 
         function submitForm() {
@@ -466,15 +466,11 @@
         G: 0
     };
 
-    allSelectedValues.forEach(value => {
-        if (!value) return;
-        // ボタンテキストの中に "（ラベル）" が含まれていることを前提とする
-        const match = value.match(/（([A-G])）/);
-        if (match && match[1]) {
-            const label = match[1];
-            labelCounts[label]++;
-        }
-    });
+    Object.values(selectedLabels).forEach(label => {
+    if (label && labelCounts[label] !== undefined) {
+        labelCounts[label]++;
+    }
+});
 
     // 表示用に整形
     let labelSummary = `【選択された数】\n`;
