--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 
         <div class="label">薬品/ネイルでのアレルギー</div>
         <div class="delivery-buttons">
-            <button type="button" id="onedelivery" onclick="selectdelivery(this)">薬品アレルギー有り</button>
-            <button type="button" id="twodelivery" onclick="selectdelivery(this)">薬品アレルギー無し</button>
+            <button type="button" id="onedelivery" data-label="A" onclick="selectdelivery(this)">薬品アレルギー有り</button>
+            <button type="button" id="twodelivery" data-label="A" onclick="selectdelivery(this)">薬品アレルギー無し</button>
         </div>
 
         <button class="submit-button" onclick="submitForm()">アンケート送信</button> <!-- フォーム送信ボタン -->
