--- a/index.html
+++ b/index.html
@@ -264,6 +264,13 @@
 
 <body>
     <div class="container">
+        <div class="info-text">あなたの“顔の印象”には、まだ知られていない魅力があります。<br>
+            「なんとなく、諦めている」 「写真に映る自分が好きじゃない」 「もっと自分に似合うケアや印象づくりが知りたい」<br>
+            と感じたことがあるなら、 この診断は、あなたのために作られたものです。<br>
+            顔の輪郭・パーツ・雰囲気・印象を多角的に見つめ直し、 6タイプの中からあなたの“美の軸”を発見！！<br>
+            直感で答えるだけで、 あなたの顔立ちが一番輝くケアや見せ方が分かります。<br>
+            『綺麗に整った自分が、未来の誰かの美しさを整える』 <br>
+            ＼ 美のバトンは、まずあなたから。診断スタート ／</div>
         <h1 style="font-size:18px;">
             【ヨーヨー式 美顔スタイル診断チャート】<br>〜11の質問で導く、あなたの“美の軸”〜
         </h1>
@@ -301,13 +308,20 @@
         <div class="info-textmemo">■ STEP 2：パーツの特徴</div>
         <div class="label">過去施術<br>(過去にサロンで受けたことがある施術)</div>
         <div class="Introduction-buttons">
-            <button type="button" id="oneIntroduction" data-label="A" onclick="selectIntroduction(this)">ネイルサロンに初めて来た(過去施術)</button>
-            <button type="button" id="twoIntroduction" data-label="A" onclick="selectIntroduction(this)">ケア(過去施術) </button>
-            <button type="button" id="threeIntroduction" data-label="A" onclick="selectIntroduction(this)">カラーリング(過去施術)</button>
-            <button type="button" id="fourIntroduction" data-label="A" onclick="selectIntroduction(this)">スカルプチャー(過去施術) </button>
-            <button type="button" id="fiveIntroduction" data-label="A" onclick="selectIntroduction(this)">ジェルネイル(過去施術) </button>
-            <button type="button" id="sixIntroduction" data-label="A" onclick="selectIntroduction(this)">フット(過去施術) </button>
-            <button type="button" id="sevenIntroduction" data-label="A" onclick="selectIntroduction(this)">その他(過去施術) </button>
+            <button type="button" id="oneIntroduction" data-label="A"
+                onclick="selectIntroduction(this)">ネイルサロンに初めて来た(過去施術)</button>
+            <button type="button" id="twoIntroduction" data-label="A" onclick="selectIntroduction(this)">ケア(過去施術)
+            </button>
+            <button type="button" id="threeIntroduction" data-label="A"
+                onclick="selectIntroduction(this)">カラーリング(過去施術)</button>
+            <button type="button" id="fourIntroduction" data-label="A" onclick="selectIntroduction(this)">スカルプチャー(過去施術)
+            </button>
+            <button type="button" id="fiveIntroduction" data-label="A" onclick="selectIntroduction(this)">ジェルネイル(過去施術)
+            </button>
+            <button type="button" id="sixIntroduction" data-label="A" onclick="selectIntroduction(this)">フット(過去施術)
+            </button>
+            <button type="button" id="sevenIntroduction" data-label="A" onclick="selectIntroduction(this)">その他(過去施術)
+            </button>
         </div>
 
         <div class="label">薬品/ネイルでのアレルギー</div>
@@ -417,78 +431,78 @@
         }
 
         function submitForm() {
-    const formData = {
-        priorityCount,
-        demandCount,
-        chanceCount,
-        IntroductionCount,
-        deliveryCount,
-    };
+            const formData = {
+                priorityCount,
+                demandCount,
+                chanceCount,
+                IntroductionCount,
+                deliveryCount,
+            };
 
-    // 必須チェック
-    if (!formData.priorityCount) {
-        alert('ご職業をご選択ください。');
-        return;
-    }
-    if (!formData.demandCount) {
-        alert('来店動機をご選択ください。');
-        return;
-    }
-    if (!formData.chanceCount) {
-        alert('来店頻度をご選択ください。');
-        return;
-    }
-    if (!formData.IntroductionCount) {
-        alert('過去施術をご選択ください。');
-        return;
-    }
-    if (!formData.deliveryCount) {
-        alert('薬品/ネイルでのアレルギーをご選択ください。');
-        return;
-    }
+            // 必須チェック
+            if (!formData.priorityCount) {
+                alert('ご職業をご選択ください。');
+                return;
+            }
+            if (!formData.demandCount) {
+                alert('来店動機をご選択ください。');
+                return;
+            }
+            if (!formData.chanceCount) {
+                alert('来店頻度をご選択ください。');
+                return;
+            }
+            if (!formData.IntroductionCount) {
+                alert('過去施術をご選択ください。');
+                return;
+            }
+            if (!formData.deliveryCount) {
+                alert('薬品/ネイルでのアレルギーをご選択ください。');
+                return;
+            }
 
-    // --- 選択回数のカウント処理 ---
-    const allSelectedValues = [
-        formData.priorityCount,
-        formData.demandCount,
-        formData.chanceCount,
-        formData.IntroductionCount,
-        formData.deliveryCount
-    ];
+            // --- 選択回数のカウント処理 ---
+            const allSelectedValues = [
+                formData.priorityCount,
+                formData.demandCount,
+                formData.chanceCount,
+                formData.IntroductionCount,
+                formData.deliveryCount
+            ];
 
-    const labelCounts = {
-        A: 0,
-        B: 0,
-        C: 0,
-        D: 0,
-        E: 0,
-        F: 0,
-        G: 0
-    };
+            const labelCounts = {
+                A: 0,
+                B: 0,
+                C: 0,
+                D: 0,
+                E: 0,
+                F: 0,
+                G: 0
+            };
 
-    Object.values(selectedLabels).forEach(label => {
-    if (label && labelCounts[label] !== undefined) {
-        labelCounts[label]++;
-    }
-});
+            Object.values(selectedLabels).forEach(label => {
+                if (label && labelCounts[label] !== undefined) {
+                    labelCounts[label]++;
+                }
+            });
 
-    // 表示用に整形
-    let labelSummary = `【選択された数】\n`;
-    for (const label in labelCounts) {
-        labelSummary += `${label}：${labelCounts[label]}\n`;
-    }
+            // 表示用に整形
+            let labelSummary = `【選択された数】\n`;
+            for (const label in labelCounts) {
+                labelSummary += `${label}：${labelCounts[label]}\n`;
+            }
 
-    // --- LINEメッセージ送信 ---
-    liff.sendMessages([{
-        type: 'text',
-        text: `≪アンケート≫\n\n【ご職業】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}\n\n【来店頻度】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n${labelSummary}`
-    }]).then(() => {
-        alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
-        liff.closeWindow();
-    }).catch((err) => {
-        console.error('メッセージの送信に失敗しました', err);
-    });
-}
+            // --- LINEメッセージ送信 ---
+            liff.sendMessages([{
+                type: 'text',
+                text: `≪診断チャート≫\n\n【ご職業】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}\n\n【来店頻度】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n${labelSummary}`
+            }]).then(() => {
+                alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
+                liff.closeWindow();
+            }).catch((err) => {
+                console.error('メッセージの送信に失敗しました', err);
+            });
+        }
 
     </script>
 </body>
